# CV_1415

./: CMakeLists.txt  README.md  notas.txt  pr0.cpp
t1/: README.md  main.cpp  pr1.cpp
t2/: .gitignore  aprender.py  aprender.sh  func.py  funcXML.py  main.cpp  main.py  objetos.xml  rec_reg.py  reconocer.py  test.py
t3/: .gitignore  apartado_1.py  gradiente.py  hough.py  hough_2.py  hough_gradient.py  houghlines_opencv.py  main.py  vanishing_3.py
t4/: .gitignore  apartado_1.py  panorama.py  panorama_hdd.py
